# ros2-intro-exercises

./: .gitignore  README.md
go2_autonomy/: COLCON_IGNORE  README.md  go2_deps.repos
go2_autonomy/go2_bridge/: package.xml  setup.cfg  setup.py
go2_autonomy/go2_bridge/config/: safety.yaml
go2_autonomy/go2_bridge/go2_bridge/: cmd_vel_arbiter.py  lowstate_to_joint_states.py  unitree_cmd_vel_bridge_node.py
go2_autonomy/go2_bringup/: package.xml  setup.py
go2_autonomy/go2_bringup/config/: cyclonedds_go2.xml  nav2_params.yaml  pointcloud_to_laserscan.yaml  slam_toolbox_mapping.yaml
go2_autonomy/go2_bringup/go2_bringup/: odom_tf_relay.py  scan_qos_relay.py
go2_autonomy/go2_bringup/launch/: mapping.launch.py  nav.launch.py
go2_autonomy/go2_bringup/rviz/: mapping.rviz
go2_autonomy/go2_description/: CMakeLists.txt  package.xml
go2_autonomy/go2_msgs/: CMakeLists.txt  package.xml
go2_autonomy/go2_msgs/srv/: SetFreeze.srv
go2_autonomy/tools/: clean_map.py  go2_amcl_diag_gui.py  go2_env.sh  go2_scan_calib_gui.py  go2_scan_calib_node.py
m0_first_steps/: README.md  validate.sh
m1_hello_node/: README.md  validate.sh
m1_hello_node/intro_node/: package.xml  setup.cfg  setup.py
m1_hello_node/intro_node/intro_node/: hello_skeleton.py  hello_solution.py
m2_pub_sub/: README.md  validate.sh
m2_pub_sub/intro_pubsub/: package.xml  setup.cfg  setup.py
m2_pub_sub/intro_pubsub/intro_pubsub/: listener_skeleton.py  listener_solution.py  talker_skeleton.py  talker_solution.py
m2_pub_sub/intro_pubsub/launch/: talker_listener.launch.py
m3_services/: README.md  validate.sh
m3_services/intro_actions/: package.xml  setup.cfg  setup.py
m3_services/intro_actions/intro_actions/: fibonacci_server.py
m3_services/intro_services/: package.xml  setup.cfg  setup.py
m3_services/intro_services/intro_services/: add_two_ints_client_skeleton.py  add_two_ints_client_solution.py  add_two_ints_server_skeleton.py  add_two_ints_server_solution.py
m4_launch/: README.md  validate.sh
m4_launch/intro_demo/: package.xml  setup.cfg  setup.py
m4_launch/intro_demo/intro_demo/: counter.py  monitor.py
m4_launch/intro_demo/launch/: two_counters.launch.py
m5_tf2_turtle/: README.md  package.xml  setup.cfg  setup.py
m5_tf2_turtle/launch/: turtle_tf2.launch.py
m5_tf2_turtle/m5_tf2_turtle/: tf_broadcaster.py  tf_follower.py
m6_urdf/: README.md  package.xml  setup.cfg  setup.py
m6_urdf/launch/: display_arm.launch.py
m6_urdf/m6_urdf/: joint_oscillator.py
m6_urdf/urdf/: simple_arm.urdf.xacro
m7_nav2_capstone/: README.md
m7_nav2_capstone/launch/: capstone_bringup.launch.py
m7_nav2_capstone/params/: nav2_params.yaml
m7_turtle_choreo/: README.md  package.xml  setup.cfg  setup.py
m7_turtle_choreo/launch/: choreo.launch.py
m7_turtle_choreo/m7_turtle_choreo/: choreographer_node.py  dancer_node.py
m7_turtle_hunter/: README.md  package.xml  setup.cfg  setup.py
m7_turtle_hunter/launch/: turtle_hunter_launch.py
m7_turtle_hunter/m7_turtle_hunter/: game_manager_node.py  hunter_node.py
m8_gazebo/: README.md  explore.repos  package.xml  setup.cfg  setup.py
m8_gazebo/config/: explore.yaml  laser_filter.yaml  nav2_rosbot.yaml  slam_rosbot.yaml
m8_gazebo/launch/: explore.launch.py  laser_filter.launch.py  nav.launch.py  slam.launch.py
rosbot_nav/: README.md  explore.repos  package.xml  setup.cfg  setup.py
rosbot_nav/config/: explore.yaml  laser_filter.yaml  nav2_rosbot.yaml  slam_rosbot.yaml
rosbot_nav/launch/: explore.launch.py  laser_filter.launch.py  nav.launch.py  slam.launch.py
