<?xml version="1.0"?>
<package format="3">
  <name>m6_urdf</name>
  <version>0.1.0</version>
  <description>Moduł 6 — URDF + robot_state_publisher (3-DoF arm)</description>
  <maintainer email="lucs.robotics@gmail.com">LucsRobotics</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
