<?xml version="1.0"?>
<package format="3">
  <name>m7_turtle_choreo</name>
  <version>0.1.0</version>
  <description>Warsztat 2 z M7 — choreografia żółwi (lemniskata)</description>
  <maintainer email="lucs.robotics@gmail.com">LucsRobotics</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
