<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>m7_turtle_hunter</name>
  <version>0.1.0</version>
  <description>Warsztat 1 z modułu 7 — łowca żółwi (hunter + game_manager)</description>
  <maintainer email="lucs.robotics@gmail.com">LucsRobotics</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
