<?xml version="1.0"?>
<package format="3">
  <name>rosbot_nav</name>
  <version>0.1.0</version>
  <description>Warsztat W4 — autonomia na REALNYM Husarion ROSbot XL (ROS 2 Jazzy): driver lidaru
    (RPLIDAR S3) + 3 tryby (mapowanie / nawigacja / eksploracja) na sprzęcie. Configi real-tuned
    (collision_monitor ON, /scan_filtered w całym stacku). Symulacja tych samych trybów = pakiet
    m8_gazebo (moduł M8).</description>
  <maintainer email="lucs.robotics@gmail.com">LucsRobotics</maintainer>
  <license>MIT</license>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <!-- Driver lidaru rplidar_ros: NIE jest częścią rosbot_ros (brak w jego .repos); na robocie
       Husariona zwykle już jest („już skompilowany"). Odpalasz go wprost: rplidar_s3_launch.py.
       Nie wrapujemy go w nasz launch — to prerekwizyt jak rosbot_bringup. -->
  <!-- explore_lite: zewnętrzny (m-explore-ros2), build ze źródeł — vcs przez explore.repos -->

  <export><build_type>ament_python</build_type></export>
</package>
